update with t5 analysis

--- a/confusion_matrix.ipynb
+++ b/confusion_matrix.ipynb
@@ -32,6 +32,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path_list = ['clip_embeddings_distance_sample_mean_train.csv', 'clip_embeddings_distance_sample_mean_val.csv', 'clip_embeddings_distance_sample_mean_gen.csv'] # clip_embeddings\n",
+    "path_list = [f'/user/work/pu22650/clip-binding-out/t5_embeddings/t5_embeddings_distance_sample_mean_{split}.csv' for split in ['train', 'val', 'gen']] # t5_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -67,7 +77,6 @@
     }
    ],
    "source": [
-    "path_list = ['clip_embeddings_distance_sample_mean_train.csv', 'clip_embeddings_distance_sample_mean_val.csv', 'clip_embeddings_distance_sample_mean_gen.csv']\n",
     "for path in path_list:\n",
     "    plot_cm(path)"
    ]
